# StockSightPro

./: .replit  README.md  main.py  pyproject.toml  utils.py  vscode_setup.md
.streamlit/: config.toml
components/: auth.py  celebrations.py  chart.py  chatbot.py  deployment_assistant.py  health_score.py  metrics.py  social.py  theme.py  tutorial.py  watchlist.py
components/games/: price_prediction.py  progress_tracker.py
pages/: 01_Ã°Â«_Financial_Games.py  01_ð®_Financial_Games.py  01_🎮_Financial_Games.py  02_ð_Progress_Dashboard.py  03_ð¤_Market_Mentor.py
static/: README.md  index.html
